# cross-platform-lib

./: .gitignore  CMakeLists.txt  CROSS_COMPILE_MINGW.md  LICENSE  README.md  TODO  WINDOWS.md  rename_project.py
cmake/: mingw-w64-toolchain.cmake
examples/: CMakeLists.txt  dynamic_example.c  static_example.c  version.c
include/cross_platform_lib/: cross_platform_lib.h
src/: cross_platform_lib.c  version.c
src/windows/: cross_platform_lib.def  version.rc.in
tests/: CMakeLists.txt  test_version.cpp
tools/:  requirements.txt  pe_resource_parser.py
